[package]
name = "rfc5444"
version = "0.1.0"
authors = ["Jean Pierre Dudey <me@jeandudey.tech>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Implementation of the RFC 5444 standard"
documentation = "https://docs.rs/rfc5444"
homepage = "https://github.com/jeandudey/rust-rfc5444"

[dependencies]
bitflags = "1"
