[package]
name = "crfc5444"
version = "0.1.0"
authors = ["Jean Pierre Dudey <me@jeandudey.tech>"]
license = "MIT/Apache-2.0"
keywords = ["routing", "rfc5444"]
readme = "README.md"
repository = "https://github.com/jeandudey/rust-rfc5444"
documentation = "https://docs.rs/rfc5444"
homepage = "https://github.com/jeandudey/rust-rfc5444"
categories = ["no-std"]
description = """
A library that can read/write messages of the RFC 5444 standard
"""
# TODO: support old compilers
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2"
rfc5444 = { version = "0.1", path = "../" }

[build-dependencies]
cbindgen = "0.14"
